PROJECT(DiskTest)
CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
SET(QT_USE_QTMAIN TRUE)
SET(QT_USE_QTWEBKIT TRUE)

IF (MSVC)
  ADD_DEFINITIONS( /D "NOMINMAX" /D "WIN32_LEAN_AND_MEAN" )
ENDIF (MSVC)

add_definitions( "/W3 /D_CRT_SECURE_NO_WARNINGS /wd4309 /nologo" )


FIND_PACKAGE(Qt4 REQUIRED)
INCLUDE(${QT_USE_FILE})

set(html_FILES ${DiskTest_SOURCE_DIR}/htmlcpp)
set(cpp_FILES ${DiskTest_SOURCE_DIR}/cpp)
file(GLOB_RECURSE html_FILES ${html_FILES}/*.cpp ${cpp_FILES}/*.cpp)

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR} htmlcpp ${htmapp_INCLUDE_DIRS} ${frwk_INCLUDE_DIRS} ${cpp_FILES})

ADD_EXECUTABLE(DiskTest WIN32 main.cpp  ${html_FILES} )

TARGET_LINK_LIBRARIES(DiskTest ${QT_LIBRARIES})

