PROJECT(DiskTestServer)
CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
SET(QT_USE_QTMAIN TRUE)
SET(QT_USE_QTWEBKIT TRUE)

IF (MSVC)
  ADD_DEFINITIONS( /D "NOMINMAX" /D "WIN32_LEAN_AND_MEAN" )
ENDIF (MSVC)

add_definitions( "/W3 /D_CRT_SECURE_NO_WARNINGS /wd4309 /nologo" )


FIND_PACKAGE(Qt4 REQUIRED)
INCLUDE(${QT_USE_FILE})



INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR}  ${htmapp_INCLUDE_DIRS} ${frwk_INCLUDE_DIRS} )

ADD_EXECUTABLE(DiskTestServer WIN32 main.cpp   )

TARGET_LINK_LIBRARIES(DiskTestServer ${QT_LIBRARIES})

